<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_capture"
        android:icon="@drawable/ic_photo_camera_black_24dp"
        android:title="@string/title_navigation_capture" />

    <item
        android:id="@+id/navigation_process"
        android:icon="@drawable/ic_play_arrow_black_24dp"
        android:title="@string/title_navigation_process" />

    <item
        android:id="@+id/navigation_organize"
        android:icon="@drawable/ic_sort_black_24dp"
        android:title="@string/title_navigation_organize" />

    <item
        android:id="@+id/navigation_review"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_navigation_review" />

    <item
        android:id="@+id/navigation_engage"
        android:icon="@drawable/ic_done_black_24dp"
        android:title="@string/title_navigation_engage"
        app:showAsAction="ifRoom"/>

</menu>
